--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prettier": "prettier --write \"src/**/*.js\""
+        "prettier": "prettier --write \"src/**/*.js\"",
+        "eslint": "eslint ./"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -31,6 +32,7 @@
     },
     "devDependencies": {
         "clsx": "^1.0.4",
+        "eslint": "^5.16.0",
         "husky": "^2.4.0",
         "lint-staged": "^8.2.0",
         "prettier": "1.18.2"
