--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "prettier": "prettier --write \"src/**/*.js\"",
-        "eslint": "eslint ./"
+        "eslint": "eslint **/*.js"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -46,6 +46,9 @@
         "*.{js,css,json,md}": [
             "prettier --write",
             "git add"
+        ],
+        "*.{js}": [
+            "eslint **/*.js"
         ]
     }
 }
