--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true
+  "semi": true,
+  "singleQuote": false,
+  "printWidth": 100
 }
