--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "clsx": "^1.0.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1"
@@ -16,7 +17,32 @@
         "eslint": "eslint **/*.js"
     },
     "eslintConfig": {
-        "extends": "react-app"
+        "extends": [
+            "react-app",
+            "airbnb-base"
+        ],
+        "rules": {
+            "indent": [
+                "error",
+                4
+            ],
+            "react/jsx-indent": [
+                "error",
+                4
+            ],
+            "react/jsx-indent-props": [
+                "error",
+                4
+            ],
+            "quotes": [
+                2,
+                "double"
+            ],
+            "comma-dangle": [
+                2,
+                "never"
+            ]
+        }
     },
     "browserslist": {
         "production": [
@@ -31,11 +57,15 @@
         ]
     },
     "devDependencies": {
-        "clsx": "^1.0.4",
-        "eslint": "^5.16.0",
+        "eslint": "^5.3.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.1",
+        "eslint-plugin-react": "^7.11.0",
         "husky": "^2.4.0",
         "lint-staged": "^8.2.0",
-        "prettier": "1.18.2"
+        "prettier": "1.18.2",
+        "react-axe": "^3.1.0"
     },
     "husky": {
         "hooks": {
