--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "prettier": "prettier --write \"src/**/*.js\"",
-        "eslint": "eslint **/*.js"
+        "eslint": "eslint **/*.js",
+        "coverage": "react-scripts test --coverage --watchAll=false"
     },
     "eslintConfig": {
         "extends": [
@@ -57,7 +58,7 @@
         ]
     },
     "devDependencies": {
-        "eslint": "^5.3.0",
+        "@testing-library/react": "^8.0.1",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.1",
