--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "clsx": "^1.0.4",
+        "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1"
@@ -20,7 +21,7 @@
     "eslintConfig": {
         "extends": [
             "react-app",
-            "airbnb-base"
+            "airbnb"
         ],
         "rules": {
             "indent": [
@@ -42,6 +43,15 @@
             "comma-dangle": [
                 2,
                 "never"
+            ],
+            "react/jsx-filename-extension": [
+                1,
+                {
+                    "extensions": [
+                        ".js",
+                        ".jsx"
+                    ]
+                }
             ]
         }
     },
