--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-scripts": "3.0.1"
+        "react-redux": "^7.1.0",
+        "react-scripts": "3.0.1",
+        "redux": "^4.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -76,7 +78,8 @@
         "husky": "^2.4.0",
         "lint-staged": "^8.2.0",
         "prettier": "1.18.2",
-        "react-axe": "^3.1.0"
+        "react-axe": "^3.1.0",
+        "redux-devtools": "^3.5.0"
     },
     "husky": {
         "hooks": {
