Initial redux implementation
Connect App and Cell components to store

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
                         ".jsx"
                     ]
                 }
-            ]
+            ],
+            "import/prefer-default-export": "off"
         }
     },
     "browserslist": {
