Try and fix eslint precommit hook

--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
             "prettier --write",
             "git add"
         ],
-        "*.{js}": [
-            "eslint **/*.js"
+        "*.js": [
+            "eslint --fix"
         ]
     }
 }
