Try and fix eslint precommit hook

--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
             "git add"
         ],
         "*.js": [
-            "eslint --fix"
+            "npm run eslint -- --fix"
         ]
     }
 }
