--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
             "prettier --write",
             "git add"
         ],
-        "*.js": [
-            "npm run eslint -- --fix"
+        "**/*.js": [
+            "eslint --fix"
         ]
     }
 }
