--- a/package.json
+++ b/package.json
@@ -88,6 +88,10 @@
         }
     },
     "lint-staged": {
+        "*.{js,css,json,md}": [
+            "prettier --write",
+            "git add"
+        ],
         "*.js": [
             "eslint --fix"
         ]
