--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "prettier": "prettier --write \"src/**/*.js\"",
-        "eslint": "eslint **/*.js",
+        "eslint": "eslint **/*.js --fix",
         "coverage": "react-scripts test --coverage --watchAll=false"
     },
     "eslintConfig": {
