--- a/package.json
+++ b/package.json
@@ -19,51 +19,10 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prettier": "prettier --write \"src/**/*.js\"",
+        "prettier": "prettier --write \"./**/*.{js,json}\"",
         "eslint": "eslint \"**/*.js\" --fix",
         "stylelint": "stylelint \"src/**/*.css\" --fix",
         "coverage": "react-scripts test --coverage --watchAll=false"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "airbnb"
-        ],
-        "rules": {
-            "indent": [
-                "error",
-                4,
-                {
-                    "SwitchCase": 1
-                }
-            ],
-            "react/jsx-indent": [
-                "error",
-                4
-            ],
-            "react/jsx-indent-props": [
-                "error",
-                4
-            ],
-            "quotes": [
-                2,
-                "double"
-            ],
-            "comma-dangle": [
-                2,
-                "never"
-            ],
-            "react/jsx-filename-extension": [
-                1,
-                {
-                    "extensions": [
-                        ".js",
-                        ".jsx"
-                    ]
-                }
-            ],
-            "import/prefer-default-export": "off"
-        }
     },
     "browserslist": {
         "production": [
@@ -80,6 +39,7 @@
     "devDependencies": {
         "@testing-library/react": "^8.0.1",
         "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^6.0.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.1",
         "eslint-plugin-react": "^7.11.0",
