--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "redux": "^4.0.1",
         "redux-observable": "^1.1.0",
         "rxjs": "^6.5.2",
-        "rxjs-compat": "^6.5.2"
+        "rxjs-compat": "^6.5.2",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^0.87.2"
     },
     "scripts": {
         "start": "react-scripts start",
