--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
         }
     },
     "lint-staged": {
-        "*.{js,css,json,md}": [
+        "*.{js,json,md}": [
             "prettier --write",
             "git add"
         ],
