--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "dependencies": {
         "clsx": "^1.0.4",
         "prop-types": "^15.7.2",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-redux": "^7.1.0",
-        "react-scripts": "3.0.1",
-        "redux": "^4.0.1",
-        "redux-observable": "^1.1.0",
-        "rxjs": "^6.5.2",
-        "rxjs-compat": "^6.5.2",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-redux": "^7.1.3",
+        "react-scripts": "^3.3.0",
+        "redux": "^4.0.5",
+        "redux-observable": "^1.2.0",
+        "rxjs": "^6.5.4",
+        "rxjs-compat": "^6.5.4",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.87.2"
     },
@@ -40,16 +40,16 @@
         ]
     },
     "devDependencies": {
-        "@testing-library/react": "^8.0.1",
-        "eslint-config-airbnb": "^17.1.0",
-        "eslint-config-prettier": "^6.0.0",
-        "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-jsx-a11y": "^6.1.1",
-        "eslint-plugin-react": "^7.11.0",
-        "husky": "^2.4.0",
-        "lint-staged": "^8.2.0",
+        "@testing-library/react": "^8.0.9",
+        "eslint-config-airbnb": "^17.1.1",
+        "eslint-config-prettier": "^6.9.0",
+        "eslint-plugin-import": "^2.19.1",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.17.0",
+        "husky": "^2.7.0",
+        "lint-staged": "^8.2.1",
         "prettier": "1.18.2",
-        "react-axe": "^3.1.0",
+        "react-axe": "^3.3.0",
         "redux-devtools": "^3.5.0",
         "stylelint": "^10.1.0",
         "stylelint-config-standard": "^18.3.0"
