--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
         "redux": "^4.0.5",
         "redux-observable": "^1.2.0",
         "rxjs": "^6.5.4",
-        "rxjs-compat": "^6.5.4",
-        "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.87.2"
+        "rxjs-compat": "^6.5.4"
     },
     "scripts": {
         "start": "react-scripts start",
