--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "proxy": "http://localhost:4000",
     "dependencies": {
         "clsx": "^1.0.4",
+        "mdi-react": "^6.5.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
